--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             flex-direction: column;
             height: 100vh;
             margin: 0;
-            background-color: #858a78;
+            background-image: url(bground.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            color: azure;
         }
         .content {
             display: flex;
@@ -38,12 +41,12 @@
         }
         a{
             text-decoration: none;
-            color: black;
+            color: azure;
         }
     </style>
 </head>
 <body>
-    <h1>CZ IS CALLIN' YOU! CLICK ON THE PHONE TO HEAR HIM</h1>
+    <h1>CZ IS CALLIN' YOU!</h1>
     <div class="content">
         <img id="image" src="phone1.png" alt="">
         <img id="image2" src="CLICK.png" alt="Imagen 2">
